2003-04-6  DennisHayes <dennish@raytek.com>
	* Converted to Unix newlines
	* Changed copyright from 2002 to 2002/3

2003-04-6  DennisHayes <dennish@raytek.com>
	* CheckOutList Update, removed everyone from list, active developers need to readd.
	* Binding.cs Marked some funmctions for Compact frame work
	* RadioButton.cs //removed inherited members 
	* RichTextBox.cs //removed inherited members
	* Splitter.cs //removed a throw not implmented so some samples could run.
	
2003-04-06 Alexandre Pigolkine <pigolkine@gmx.de>
	* Control.cs
	* Form.cs
	* NativeWindow.cs
	* Win32functions.cs
	* Win32structs.cs : initial implementation of MDI interface.
		Aleksey Ryabchuk <ryabchuk@yahoo.com>

	* Button.cs
	* CheckedListBox.cs
	* Control.cs
	* GroupBox.cs 
	* ListBox.cs
	* ScrollableControl.cs
		Attempt to minimize fliker effect
		Alexandre Pigolkine

2003-03-30 Alexandre Pigolkine <pigolkine@gmx.de>
	* DateTimePicker.cs
	* StatusBar.cs
	* tooltip.cs
		Fixed AllocCoTaskMem issure. Bug-fix for DTP.
		Aleksey Ryabchuk <ryabchuk@yahoo.com>

2003-03-29 Alan Tam <Tam@SiuLung.com>
	* DataGrid.cs
		stubbed a missing method

2003-03-26 Alexandre Pigolkine <pigolkine@gmx.de>
	* NumericUpDown.cs
	* ScrollableControl.cs
	* UpDownBase.cs
	* win32Structs.cs
		implementation of NumericUpDown

	* tooltip.cs
	* win32Enums.cs
	* win32functions.cs
		implementation of ToolTip control class.
		Aleksey Ryabchuk <ryabchuk@yahoo.com>

2003-03-25 Alexandre Pigolkine <pigolkine@gmx.de>
	* CheckedListBox.cs
	* ListBox.cs
		Implementation of Collections
		Alexandre Pigolkine <pigolkine@gmx.de>

	* Control.cs
	* DateTimePicker.cs
	* win32Enums.cs
		notification handling for DateTimePicker control.
	* StatusBar.cs
	* TrackBar.cs
		 small modifications.
		Aleksey Ryabchuk <ryabchuk@yahoo.com>


2003-03-23 Alexandre Pigolkine <pigolkine@gmx.de>
	* DateTimePicker.cs
	* Form.cs
	* ProgressBar.cs
	* win32Enums.cs
	* win32Structs.cs
		Implementation of ProgressBar and DateTimePicker controls by