@@ -61,27 +61,17 @@ namespace System.Windows.Forms {
 		[MonoTODO]
 		protected override CreateParams CreateParams {
 			get {
-				if( Parent != null) {
-					CreateParams createParams = new CreateParams ();
+				CreateParams createParams = base.CreateParams;
 
-					createParams.Caption = Text;
-					createParams.ClassName = "msctls_progress32";
-					createParams.X = Left;
-					createParams.Y = Top;
-					createParams.Width = Width;
-					createParams.Height = Height;
-					createParams.ClassStyle = 0;
-					createParams.ExStyle = 0;
-					createParams.Param = 0;
-					createParams.Parent = Parent.Handle;
-					createParams.Style = (int) (
-						WindowStyles.WS_CHILD | 
-						WindowStyles.WS_VISIBLE |
-						WindowStyles.WS_CLIPCHILDREN |
-						WindowStyles.WS_CLIPSIBLINGS );
-					return createParams;
-				}
-				return null;
+				createParams.ClassName = "msctls_progress32";
+
+				createParams.Style = (int) (
+					WindowStyles.WS_CHILD | 
+					WindowStyles.WS_VISIBLE |
+					WindowStyles.WS_CLIPCHILDREN |
+					WindowStyles.WS_CLIPSIBLINGS );
+
+				return createParams;
 			}		
 		}
 
